--- a/app/src/main/res/drawable/clear_night_w.xml
+++ b/app/src/main/res/drawable/clear_night_w.xml
@@ -1,6 +1,6 @@
-<vector android:height="24dp" android:viewportHeight="29.62"
-    android:viewportWidth="28.99" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="24dp" android:viewportHeight="57.65"
+    android:viewportWidth="57.56" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#00000000"
-        android:pathData="M25.8,21.35c-11.47,0 -15.24,-11.92 -11.34,-19.79A13.28,13.28 0,1 0,26.37 21.32C26.18,21.33 26,21.35 25.8,21.35Z"
+        android:pathData="M50.48,41.45c-23.12,0 -30.71,-24 -22.85,-39.89a26.77,26.77 0,1 0,24 39.83C51.25,41.41 50.88,41.45 50.48,41.45Z"
         android:strokeColor="#FFFFFFFF" android:strokeWidth="3"/>
 </vector>
