--- a/app/src/main/res/layout/fragment_home_screen_new.xml
+++ b/app/src/main/res/layout/fragment_home_screen_new.xml
@@ -11,8 +11,10 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
-        <RelativeLayout
-            android:padding="@dimen/margin_16"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:paddingStart="@dimen/margin_16"
+            android:paddingEnd="@dimen/margin_16"
+            android:paddingTop="@dimen/margin_16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -21,25 +23,25 @@
                 android:id="@+id/tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
                 android:textColor="@color/absoluteBlack"
                 app:fontFamily="@font/montserrat"
-                android:textSize="@dimen/text_view_20sp"/>
+                android:textSize="@dimen/text_view_20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/icon"
+                android:layout_marginBottom="@dimen/margin_4"/>
             <ImageView
                 android:id="@+id/icon"
-                android:padding="@dimen/margin_16"
-                android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/icon_36dp"
                 android:layout_alignParentEnd="true"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/icon_36dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="ContentDescription" />
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <TextView
                 android:id="@+id/big_text"
                 android:layout_width="match_parent"
@@ -82,8 +84,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:paddingBottom="@dimen/margin_8"
-                    android:paddingStart="@dimen/margin_16"
-                    android:paddingEnd="@dimen/margin_16"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/guideline1">
                     <TextView
@@ -131,6 +131,8 @@
                         android:layout_width="match_parent"
                         android:layout_marginBottom="@dimen/margin_8"
                         android:layout_height="@dimen/temperature_bar_height"
+                        android:layout_marginStart="@dimen/margin_16"
+                        android:layout_marginEnd="@dimen/margin_16"
                         android:background="@drawable/temperature_bar"
                         app:layout_constraintBottom_toBottomOf="parent" />
                     <View
@@ -155,21 +157,20 @@
                     android:orientation="horizontal"
                     android:weightSum="3"
                     android:paddingStart="@dimen/margin_16"
-                    android:paddingEnd="@dimen/margin_16"
+                    android:paddingEnd="@dimen/margin_8"
                     android:paddingBottom="@dimen/margin_16"
                     app:layout_constraintTop_toBottomOf="@id/guideline1"
                     android:baselineAligned="false">
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_height="wrap_content">
                         <ImageView
                             android:layout_width="@dimen/icon_24dp"
                             android:layout_height="@dimen/icon_24dp"
-                            android:src="@drawable/clear_day_b"
-                            android:layout_gravity="center"
+                            android:src="@drawable/ic_uv"
+                            android:layout_gravity="center_vertical"
                             tools:ignore="ContentDescription"
                             android:layout_marginEnd="@dimen/margin_8"/>
                         <LinearLayout
@@ -184,6 +185,7 @@
                                 android:textSize="@dimen/text_view_14sp"
                                 app:fontFamily="@font/montserrat"/>
                             <TextView
+                                android:id="@+id/uv_summary"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/uv_index_title"
@@ -195,14 +197,13 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_height="wrap_content">
                         <ImageView
                             android:layout_width="@dimen/icon_24dp"
                             android:layout_height="@dimen/icon_24dp"
-                            android:src="@drawable/clear_day_b"
-                            android:layout_gravity="center"
+                            android:src="@drawable/ic_humidity"
+                            android:layout_gravity="center_vertical"
                             tools:ignore="ContentDescription"
                             android:layout_marginEnd="@dimen/margin_8"/>
                         <LinearLayout
@@ -228,14 +229,13 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_weight="1"
-                        android:gravity="center"
                         android:orientation="horizontal"
                         android:layout_height="wrap_content">
                         <ImageView
                             android:layout_width="@dimen/icon_24dp"
                             android:layout_height="@dimen/icon_24dp"
-                            android:src="@drawable/clear_day_b"
-                            android:layout_gravity="center"
+                            android:src="@drawable/ic_visibility"
+                            android:layout_gravity="center_vertical"
                             tools:ignore="ContentDescription"
                             android:layout_marginEnd="@dimen/margin_8"/>
                         <LinearLayout
