update details screen, add what to wear and what to eat

--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -146,6 +146,9 @@
   <dimen name="widget_margin">
     7.11dp
   </dimen>
+  <dimen name="divider_height">
+    0.89dp
+  </dimen>
   <dimen name="temperature_pointer_width">
     1.78dp
   </dimen>
