--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -146,6 +146,9 @@
   <dimen name="widget_margin">
     8dp
   </dimen>
+  <dimen name="divider_height">
+    1dp
+  </dimen>
   <dimen name="temperature_pointer_width">
     2dp
   </dimen>
