--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,7 +49,7 @@
     <dimen name="widget_height">107dp</dimen>
     <dimen name="widget_width">360dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
-
+    <dimen name="divider_height">1dp</dimen>
     <dimen name="temperature_pointer_width">2dp</dimen>
     <dimen name="temperature_pointer_height">28dp</dimen>
     <dimen name="temperature_bar_height">12dp</dimen>
