add picture background, collapse data layout, update UI/UX

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
         android:layout_gravity="end|center"
         android:backgroundTint="@color/pureWhite"
         app:rippleColor="@color/bg_screen1"
-        android:layout_marginEnd="@dimen/margin_16"
-        android:layout_marginBottom="@dimen/icon_24dp"
+        android:layout_margin="@dimen/margin_16"
         android:src="@drawable/ic_round_location_b"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/location_list_layout"
