--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainFragments.DetailsFragment">
+    tools:context=".MainFragments.DetailsFragment"
+    android:background="@color/pureWhite">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
