--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -113,6 +113,9 @@
   <dimen name="text_view_14sp">
     23.33sp
   </dimen>
+  <dimen name="text_view_16sp">
+    26.67sp
+  </dimen>
   <dimen name="text_view_18sp">
     30.0sp
   </dimen>
