--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,7 @@
     <dimen name="big_text">72sp</dimen>
     <dimen name="text_view_12sp">12sp</dimen>
     <dimen name="text_view_14sp">14sp</dimen>
+    <dimen name="text_view_16sp">16sp</dimen>
     <dimen name="text_view_18sp">18sp</dimen>
     <dimen name="text_view_20sp">20sp</dimen>
     <dimen name="text_view_24sp">24sp</dimen>
