--- a/app/src/main/res/layout/about_me_layout.xml
+++ b/app/src/main/res/layout/about_me_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/about_me_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/about_me_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pureWhite">
+    android:background="@color/pureWhite"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/btn_close_about"
@@ -18,6 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/about_me_title"
         tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/about_me_title"
         android:layout_width="wrap_content"
@@ -38,8 +39,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
 
-        app:layout_constraintTop_toBottomOf="@+id/about_me_title"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_me_title">
 
         <TextView
             android:id="@+id/textView"
