--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/pureWhite"
+    android:fitsSystemWindows="true"
     tools:context=".Activities.MainActivity">
+
     <ImageView
         android:id="@+id/background"
-        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:ignore="ContentDescription"/>
+        android:background="@android:color/transparent"
+        tools:ignore="ContentDescription" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <com.OdiousPanda.rainbow.CustomUI.MovableFAB
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|center"
-        android:backgroundTint="@color/pureWhite"
-        app:rippleColor="@color/bg_screen1"
         android:layout_margin="@dimen/margin_16"
-        android:src="@drawable/ic_round_location_b"/>
+        android:backgroundTint="@color/pureWhite"
+        android:src="@drawable/ic_round_location_b"
+        app:rippleColor="@color/bg_screen1" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/location_list_layout"
         android:layout_width="match_parent"
@@ -55,9 +58,9 @@
             android:layout_height="@dimen/icon_30dp"
             android:layout_marginStart="@dimen/margin_16"
             android:src="@drawable/ic_round_back_b"
+            app:layout_constraintBottom_toBottomOf="@id/location_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/location_title"
-            app:layout_constraintBottom_toBottomOf="@id/location_title"
             tools:ignore="ContentDescription" />
 
         <ImageView
@@ -66,9 +69,9 @@
             android:layout_height="@dimen/icon_30dp"
             android:layout_marginEnd="@dimen/margin_16"
             android:src="@drawable/ic_round_add_b"
+            app:layout_constraintBottom_toBottomOf="@id/location_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/location_title"
-            app:layout_constraintBottom_toBottomOf="@id/location_title"
             tools:ignore="ContentDescription" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -82,77 +85,87 @@
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <RelativeLayout
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:background="@color/pureWhite">
+        android:background="@color/pureWhite"
+        android:visibility="invisible">
+
         <ImageView
             android:id="@+id/loading_icon"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_loading"
             android:layout_width="@dimen/big_icon_128dp"
             android:layout_height="@dimen/big_icon_128dp"
+            android:layout_centerInParent="true"
             android:layout_marginBottom="@dimen/margin_n_16"
+            android:src="@drawable/ic_loading"
             tools:ignore="ContentDescription" />
+
         <TextView
             android:id="@+id/loading_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontFamily="@font/montserrat"
-            android:textSize="@dimen/text_view_18sp"
             android:layout_below="@id/loading_icon"
             android:layout_centerInParent="true"
+            android:text="@string/loading_text"
             android:textColor="@color/absoluteBlack"
-            android:text="@string/loading_text"/>
+            android:textSize="@dimen/text_view_18sp"
+            app:fontFamily="@font/montserrat" />
     </RelativeLayout>
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/no_connection_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:background="@color/pureWhite">
-        <ImageView
-            android:id="@+id/no_connection_icon"
-            android:layout_width="@dimen/icon_90dp"
-            android:layout_height="@dimen/icon_90dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_sadcloud"
-            android:translationY="@dimen/margin_n_16" />
-        <TextView
-            android:id="@+id/tv_1"
+        android:background="@color/pureWhite"
+        android:visibility="invisible">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/absoluteBlack"
-            android:layout_below="@id/no_connection_icon"
-            app:fontFamily="@font/montserrat"
-            android:textSize="@dimen/text_view_18sp"
-            android:translationY="@dimen/margin_n_16"
-            android:text="@string/no_connection_tv1"/>
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
+
         <TextView
-            android:id="@+id/tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:fontFamily="@font/montserrat_light"
+            android:text="404"
             android:textColor="@color/absoluteBlack"
-            android:layout_below="@id/tv_1"
-            app:fontFamily="@font/montserrat"
-            android:textSize="@dimen/text_view_18sp"
-            android:translationY="@dimen/margin_n_16"
-            android:text="@string/no_connection_tv2"/>
+            android:textSize="@dimen/text_view_54sp"
+            app:layout_constraintBottom_toTopOf="@id/guideline2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="HardcodedText" />
+
         <TextView
-            android:id="@+id/tv_3"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/no_connection_tv1"
             android:textColor="@color/absoluteBlack"
-            android:layout_below="@id/tv_2"
-            app:fontFamily="@font/montserrat"
-            android:textSize="@dimen/text_view_18sp"
-            android:translationY="@dimen/margin_n_16"
-            android:text="@string/no_connection_tv3"/>
-    </RelativeLayout>
+            android:textSize="@dimen/text_view_24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/guideline2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_4"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center"
+            android:padding="@dimen/margin_16"
+            android:text="@string/no_connection_tv2"
+            android:textColor="@color/absoluteBlack"
+            android:textSize="@dimen/text_view_14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
