--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/widget_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/widget_layout"
     android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/layout_data"
         android:layout_width="wrap_content"
@@ -12,65 +13,74 @@
         android:orientation="vertical"
         android:paddingEnd="@dimen/margin_16"
         tools:ignore="RtlSymmetry">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/margin_n_8">
+            android:layout_marginBottom="@dimen/margin_n_8"
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/widget_icon"
                 android:layout_width="@dimen/icon_90dp"
-                android:layout_gravity="end"
-                android:padding="@dimen/margin_16"
-                android:layout_marginEnd="@dimen/margin_n_16"
                 android:layout_height="@dimen/icon_90dp"
-                tools:ignore="ContentDescription"/>
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/margin_n_16"
+                android:padding="@dimen/margin_16"
+                tools:ignore="ContentDescription" />
+
             <ImageView
                 android:id="@+id/tv_temp_widget"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_4"
-                android:layout_height="wrap_content"
                 android:paddingStart="@dimen/margin_16"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/tv_reaFeel_widget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/margin_16"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription" />
+
             <ImageView
                 android:layout_width="@dimen/margin_16"
                 android:layout_height="@dimen/margin_16"
                 android:layout_marginStart="@dimen/margin_4"
                 android:layout_marginEnd="@dimen/margin_4"
                 android:src="@drawable/ic_round_location_w"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription" />
+
             <ImageView
                 android:id="@+id/widget_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:ignore="ContentDescription"/>
+                tools:ignore="ContentDescription" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/widget_quote_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_below="@id/layout_data"
         android:layout_marginTop="@dimen/margin_16"
-        android:layout_below="@id/layout_data">
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/quote_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            tools:ignore="ContentDescription"/>
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/quote_sub"
@@ -79,19 +89,20 @@
             android:layout_marginStart="8dp"
             tools:ignore="ContentDescription" />
     </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/widget_loading_layout"
-        android:visibility="invisible"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
         <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="@dimen/icon_90dp"
             android:layout_height="@dimen/icon_90dp"
-            android:indeterminate="true"
             android:layout_centerInParent="true"
-            style="?android:attr/progressBarStyleLarge"
-            android:indeterminateDrawable="@drawable/progressbar_circular"
-            />
+            android:indeterminate="true"
+            android:indeterminateDrawable="@drawable/progressbar_circular" />
     </RelativeLayout>
 
 </RelativeLayout>
