--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -1,119 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_screen1"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bg_screen3"
     android:weightSum="3">
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#20000000"
-        android:layout_weight="2">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_horizontal_margin"
-            android:layout_width="@dimen/minimum_screen_width"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/tv_temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_4"
-                android:layout_marginTop="@dimen/margin_24"
-                android:text="25°C"
-                android:textColor="@color/pureWhite"
-                android:textSize="@dimen/text_view_54sp"
-                app:fontFamily="@font/montserrat"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/tv_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_4"
-                android:text="Humud and partly cloudy"
-                android:textColor="@color/pureWhite"
-                android:textSize="@dimen/text_view_18sp"
-                app:fontFamily="@font/montserrat"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_temp"
-                tools:ignore="HardcodedText" />
-
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="@dimen/icon_90dp"
-                android:layout_height="@dimen/icon_90dp"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/icon_content_description"
-                android:src="@drawable/cloudy_w"
-                app:layout_constraintTop_toTopOf="@id/tv_temp"
-                app:layout_constraintBottom_toBottomOf="@id/tv_temp"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <TextView
-                android:id="@+id/big_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineSpacingMultiplier="0.8"
-                android:text="A big quote about weather"
-                android:textColor="@color/pureWhite"
-                android:textSize="@dimen/text_view_54sp"
-                app:fontFamily="@font/montserrat"
-                app:layout_constraintBottom_toTopOf="@+id/small_text"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/small_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="And a comment on the quote"
-                android:textColor="@color/pureWhite"
-                android:textSize="@dimen/text_view_18sp"
-                app:fontFamily="@font/montserrat"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="HardcodedText" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-    <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/slide_3_title"
-            android:layout_marginTop="@dimen/margin_16"
-            app:fontFamily="@font/montserrat"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/text_view_24sp"
-            android:textStyle="bold" />
+        android:layout_marginBottom="@dimen/dots_container_height"
+        android:background="@drawable/tutorial_text_background"
+        android:padding="@dimen/margin_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingLeft="@dimen/desc_padding"
-            android:paddingRight="@dimen/desc_padding"
-            app:fontFamily="@font/montserrat"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center_horizontal"
             android:text="@string/slide_3_desc"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/text_view_18sp" />
-
-    </LinearLayout>
-
-</LinearLayout>
+            android:textColor="@color/pureWhite"
+            android:textSize="@dimen/text_view_18sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
