--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -14,6 +14,9 @@
   <dimen name="dots_height">
     26.67dp
   </dimen>
+    <dimen name="dots_container_height">
+        53.33dp
+    </dimen>
   <dimen name="dots_margin_bottom">
     17.78dp
   </dimen>
@@ -92,6 +95,9 @@
   <dimen name="icon_90dp">
     80.0dp
   </dimen>
+    <dimen name="icon_72dp">
+        64.0dp
+    </dimen>
   <dimen name="icon_24dp">
     21.33dp
   </dimen>
